# 3D-Registration-with-Maximal-Cliques

./: .gitignore  LICENSE  README.md
Linux/: CMakeLists.txt  Eva.h  PCR.cpp  desc_dec.cpp  funcs.cpp  main.cpp  readme.md  registration.cpp  visualization.cpp
LoInlierRatio/: readme.md  readme.txt
Python_implement/: README.md  example.py  example_with_fpfh.py  example_with_fpfh_fcgf.py  main.py
Python_implement/mise/: cal_fcgf.py  fcgf.py  pointcloud.py
Python_implement/test/: GTmat.txt  corr.txt  corr_data.txt  target.ply
Windows/: CMakeLists.txt  Eva.h  PCL_x64_release.props  PCR.cpp  desc_dec.cpp  funcs.cpp  getopt.h  main.cpp  opt.cpp  readme.md  registration.cpp  visualization.cpp
Windows/feature_match_new/: Eva.h  PCR.cpp  desc_dec.cpp  feature_match_new.sln  feature_match_new.vcxproj  feature_match_new.vcxproj.filters  funcs.cpp  test_registration.cpp  visualization.cpp  源.cpp
demo/: des.pcd  src.pcd
demo/result/: corr.txt  est.txt  selected.txt
